fix: fix pages and  menu

--- a/themes/shoka/languages/en.yml
+++ b/themes/shoka/languages/en.yml
@@ -15,7 +15,7 @@ title:
   archive_in: Posted on "%s"
 
 menu:
-  home: Home
+  home: 主页
   posts: Posts
   archives: Archives
   categories: Categories
